# nlw8

./: .gitignore  package.json  tailwind.config.js
mobile/: App.tsx  package.json
mobile/src/components/Button/: index.tsx  styles.ts
mobile/src/components/Copyright/: index.tsx  styles.ts
mobile/src/components/Form/: index.tsx  styles.ts
mobile/src/components/Option/: index.tsx  styles.ts
mobile/src/components/Options/: index.tsx  styles.ts
mobile/src/components/ScreenshotButton/: index.tsx  styles.ts
mobile/src/components/Success/: index.tsx  styles.ts
mobile/src/components/Widget/: index.tsx  styles.ts
mobile/src/libs/: api.ts
mobile/src/utils/: feedbackTypes.ts
rusty_server/: .env.example  .gitignore  Cargo.toml
rusty_server/entity/: Cargo.toml
rusty_server/entity/src/: feedback.rs
rusty_server/migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
rusty_server/src/: email.rs  main.rs
rusty_server/tests/: submit_feedback.rs
rusty_web/: .gitignore  Cargo.toml  build.rs  index.html  index.js  package.json  tailwind.config.js  tailwind.css
rusty_web/src/: app.rs  icons.rs  main.rs
rusty_web/src/components/: close_button.rs  mod.rs  widget.rs
rusty_web/src/components/widget_form/: mod.rs  steps.rs
server/: .env.example  .gitignore  jest.config.js  jest.config.ts  package.json
server/coverage/: clover.xml  coverage-final.json  lcov.info
server/coverage/lcov-report/: index.html
server/coverage/lcov-report/src/use-cases/: index.html  submit-feedback-use-case.ts.html
server/prisma/: dev.db  schema.prisma
server/src/: routes.ts  server.ts
server/src/adapters/: mail-adapter.ts
server/src/adapters/nodemailer/: nodemailer-mail-adapter.ts
server/src/repositories/: feedbacs-repository.ts
server/src/repositories/prisma/: prisma-feedbacks-repository.ts
server/src/use-cases/: submit-feedback-use-case.spec.ts  submit-feedback-use-case.ts
src/: App.tsx
src/components/: CloseButton.tsx  Widget.tsx
src/components/WidgetForm/: ScreenshotButton.tsx  index.tsx
web/: package.json
web/src/: main.tsx
web/src/components/WidgetForm/: Loading.tsx
(+3 files in other folders)
