[package]
name = "rusty_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
dotenv = "0.15.0"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.137"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ], default-features = false }
lettre = "0.10.0-rc.6"
