[package]
name = "rusty_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

dotenv = "0.15.0"
serde = "1.0.137"
lettre = "0.10.0-rc.6"

actix-web = "4.0.1"
actix-cors = "0.6.1"

sea-orm = { version = "^0", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-actix-native-tls", "macros" ], default-features = false }
