[package]
name = "rusty_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.7.0"

# you need to have installed tailwindcss in your machine
[scripts]
watch = "tailwindcss -c ./tailwind.config.js -o ./tailwind.css -w"
build-release = "NODE_ENV=production tailwindcss -c ./tailwind.config.js -o ./tailwind.css --minify"
