[package]
name = "rusty_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.7.0"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3.57"
js-sys = "0.3.57"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
